# ComfyUI-MiniCPM-Plus

./: __init__.py  install.py  minicpm3_4b_GPTQ_int4_node.py  minicpm3_4b_node.py  minicpm_v_2_6_int_4_node.py  minicpm_v_2_6_node.py  pyproject.toml  readme.md  requirements.txt  text_display_node.py
js/: text_display_node.js
