[project]
name = "comfyui-minicpm-plus"
description = "Custom nodes for MiniCPM language models in ComfyUI. Provides advanced text generation and image understanding functions."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["transformers", "torch", "tqdm", "huggingface_hub", "torchvision", "numpy>=1.21.0", "sentencepiece==0.1.99", "decord", "Pillow>=10.1.0", "jsonschema", "datamodel-code-generator", "accelerate>=0.30.1", "bitsandbytes>=0.43.1", "optimum>=1.16.1", "auto-gptq>=0.5.1"]

[project.urls]
Repository = "https://github.com/CY-CHENYUE/ComfyUI-MiniCPM-Plus"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "@cychenyue"
DisplayName = "ComfyUI-MiniCPM-Plus"
Icon = ""
